Fix for thumbs that are too large.

--- a/data/css/display.css
+++ b/data/css/display.css
@@ -176,6 +176,7 @@
     vertical-align:text-top;
     text-align:center;
 }
+.folder img,.picture img{max-width:100px;max-height:100px;}
 
 .folder{
     background: #EEE;
